# Kirutma

./: .gitignore  .signing-secrets.env.example  COPYRIGHT  Cargo.toml  DISTRIBUTION.md  Kirutma_1.0.0_aarch64.dmg  LICENSE  PLAN.md  README.md  SIGNING.md  USER_MANUAL.md  sample_design.md
.github/: SECRETS_CHECKLIST.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/canvas/: engine.rs  mod.rs
apps/desktop/src/canvas/: export-image.ts  export-svg.ts  fill.ts  geometry.ts  gpu-bridge.ts  image-cache.ts  lines.ts  renderer.ts  resolve-document.ts  shapes.ts  text-overlay.ts  transform-handles.ts  vector-path.ts
apps/desktop/src/constants/: frame-presets.ts  (+2 more)
crates/kirutma-core/: Cargo.toml
crates/kirutma-core/src/: bounds.rs  lib.rs  spatial.rs  types.rs
crates/kirutma-render/: Cargo.toml
crates/kirutma-render/src/: camera.rs  color.rs  lib.rs  renderer.rs  scene_builder.rs  tiles.rs
docs/screenshots/: README.md
marketing/: README.md  app-store-copy.md  email-announcement.md  faq.md  localized-snippets.md  press-kit.md  product-overview.md  social-media.md  taglines-and-messaging.md
marketing/brand/: guidelines.md
marketing/screenshots/: README.md
scripts/: encode-signing-cert.sh  setup-github-secrets.sh
(+30 files in other folders)
