[workspace]
members = [
    "crates/kirutma-core",
    "crates/kirutma-render",
    "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Alexandar Vincent Paulraj"]
license = "LicenseRef-Proprietary"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
