[package]
name = "kirutma"
version = "1.0.0"
description = "Kirutma — Figma-class design tool"
authors = ["Kirutma"]
edition = "2021"

[lib]
name = "kirutma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
parking_lot = "0.12"
pollster = "0.4"
kirutma-core = { path = "../../../crates/kirutma-core" }
kirutma-render = { path = "../../../crates/kirutma-render" }
vello = "0.9"
